struct CSLinkRequestMsg{
  1: i64 otherId
}
