struct SCLinkRequestMsg{
  1: i64 otherId
  2: string ip
  3: i32 port
}
