
struct SCPingMsg{
  1: i64 id
}
